--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
     "font-awesome": "^4.7.0",
+    "i18next": "^19.5.1",
+    "i18next-browser-languagedetector": "^5.0.0",
+    "i18next-xhr-backend": "^3.2.2",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-i18next": "^9.0.10",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "reactstrap": "^8.4.1"
