--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
     "react-i18next": "^9.0.10",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
